2004-12-11  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* NEWS
	* README: updates for the GIMP 2.2.0 release.

2004-12-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp.c: got rid of a global variable.

	* plug-ins/common/bumpmap.c (dialog_bumpmap_callback): more changes
	to restore the gimp-2.0 behaviour.

2004-12-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable-preview.[ch]: added new function
	gimp_drawable_get_sub_preview() which returns a scaled preview of
	a part of a drawable.

	(gimp_drawable_preview_scale): made it work with srcPR.x and
	srcPR.y being != 0.

	* app/core/gimpimage-preview.c (gimp_image_get_new_preview)
	* app/widgets/gimpviewrendererdrawable.c
	(gimp_view_renderer_drawable_render): if the area of the drawable
	preview is more than 4 times larger than the drawable itself (evil
	heuristic, but seems to work fine), use above function to get a
	sub-preview of the drawable instead of getting an insanely large
	preview of the whole drawable just to use a small part of it.
	Fixes bug #142074.

	* app/core/gimpimage-preview.c (gimp_image_get_new_preview):
	optimized by skipping layers which do not intersect with the
	canvas.

2004-12-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/bumpmap.c (dialog_bumpmap_callback): do actually
	change the bumpmap drawable. Fixes bug #160985, hopefully without
	reopening bug #158494.

2004-12-11  Sven Neumann  <sven@gimp.org>

	* configure.in: set version to 2.2.0.

	* tools/Makefile.am
	* tools/authorsgen/Makefile.am
	* tools/authorsgen/authorsgen.pl
	* tools/authorsgen/contributors: removed authorsgen, a perl script
	that used to be used to create AUTHORS and authors.h.

	* Makefile.am
	* authors.dtd
	* authors.xml: added a simple XML file that lists authors and
	contributors and a DTD to validate it.

	* authors.xsl: a stylesheet to generate AUTHORS from authors.xml.

	* app/dialogs/Makefile.am
	* app/dialogs/authors.xsl: a stylesheet to generate authors.h from
	authors.xml.
