@@ -1,3 +1,10 @@
+2004-12-11  Kevin Cozens  <kcozens@cvs.gimp.org>
+
+	* plug-ins/script-fu/scripts/copy-visible.scm: Apply the layer mask
+	when copying a single layer with a layer mask. Fixes bug #138662.
+
+	* plug-ins/script-fu/scripts/t-o-p-logo.scm: Removed ' character.
+
 2004-12-11  Sven Neumann  <sven@gimp.org>
 
 	* INSTALL
